[gd_scene load_steps=3 format=3 uid="uid://dikaaja60dhm5"]

[ext_resource type="Script" path="res://DesafioNorte/lixo.gd" id="1_8ffsq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbshe"]
size = Vector2(32, 32)

[node name="Lixo" type="Area2D"]
script = ExtResource("1_8ffsq")

[node name="ColorRectL" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0.470076, 0.470076, 0.470076, 1)

[node name="ColorRectM" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_kbshe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
